--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contexte.ai — Brand Intelligence Report</title>
+  <title>Mint — Brand Intelligence Report</title>
   <style>
     /* Base styles */
     * {
